swagger doc fixes
